@@ -20,6 +20,10 @@ Clients:
 - mosquitto_sub will now quit with an error if the %U option is used on
   Windows, rather than just quitting. Closes #1908.
 
+Apps:
+- Perform stricter parsing of input username in mosquitto_passwd. Closes
+  #570126 (Eclipse bugzilla).
+
 
 1.6.12 - 2020-08-19
 ===================
